--- a/package.json
+++ b/package.json
@@ -1,51 +1,56 @@
 {
-  "name": "ventas-app",
-  "version": "0.0.0",
-  "scripts": {
-    "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "~10.0.2",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/router": "~10.0.2",
-    "animate.css": "^4.1.0",
-    "chart.js": "^2.9.3",
-    "rxjs": "~6.6.0",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.1",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
-    "@angular/language-service": "~10.0.2",
-    "@types/chart.js": "^2.9.22",
-    "@types/chartjs": "0.0.31",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^5.1.2",
-    "jasmine-core": "~3.5.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.6"
-  }
+    "name": "ventas-app",
+    "version": "0.0.0",
+    "scripts": {
+        "ng": "ng",
+        "start": "ng serve",
+        "build": "ng build",
+        "test": "ng test",
+        "lint": "ng lint",
+        "e2e": "ng e2e"
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "~10.0.2",
+        "@angular/common": "~10.0.2",
+        "@angular/compiler": "~10.0.2",
+        "@angular/core": "~10.0.2",
+        "@angular/forms": "~10.0.2",
+        "@angular/platform-browser": "~10.0.2",
+        "@angular/platform-browser-dynamic": "~10.0.2",
+        "@angular/router": "~10.0.2",
+        "@fortawesome/angular-fontawesome": "^0.6.1",
+        "@fortawesome/fontawesome-svg-core": "^1.2.28",
+        "@fortawesome/free-solid-svg-icons": "^5.13.0",
+        "@sweetalert2/ngx-sweetalert2": "^8.1.1",
+        "animate.css": "^4.1.0",
+        "chart.js": "^2.9.3",
+        "rxjs": "~6.6.0",
+        "sweetalert2": "^9.14.4",
+        "tslib": "^2.0.0",
+        "zone.js": "~0.10.2"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "~0.1000.1",
+        "@angular/cli": "~10.0.1",
+        "@angular/compiler-cli": "~10.0.2",
+        "@angular/language-service": "~10.0.2",
+        "@types/chart.js": "^2.9.22",
+        "@types/chartjs": "0.0.31",
+        "@types/jasmine": "~3.3.8",
+        "@types/jasminewd2": "~2.0.3",
+        "@types/node": "^12.11.1",
+        "codelyzer": "^5.1.2",
+        "jasmine-core": "~3.5.0",
+        "jasmine-spec-reporter": "~5.0.0",
+        "karma": "~5.0.0",
+        "karma-chrome-launcher": "~3.1.0",
+        "karma-coverage-istanbul-reporter": "~3.0.2",
+        "karma-jasmine": "~3.3.0",
+        "karma-jasmine-html-reporter": "^1.5.0",
+        "protractor": "~7.0.0",
+        "ts-node": "~7.0.0",
+        "tslint": "~6.1.0",
+        "typescript": "~3.9.6"
+    }
 }
